idsvr/idsvr-helm.yaml
---
# Source: idsvr/templates/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: curity-idsvr-network-policy
spec:
  podSelector:
    matchLabels:
      role: curity-idsvr-admin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: curity-idsvr-runtime
      ports:
        - protocol: TCP
          port: 6789
---
# Source: idsvr/templates/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: curity-idsvr-admin-svc
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: curity
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: config-port
      protocol: TCP
      name: config-port
    - port: 4465
      targetPort: health-check
      protocol: TCP
      name: health-check
    - port:  4466
      targetPort: metrics
      protocol: TCP
      name: metrics
    - port: 6749
      targetPort: admin-ui
      protocol: TCP
      name: admin-ui
  selector:
    app.kubernetes.io/name: idsvr
    app.kubernetes.io/instance: curity
---
# Source: idsvr/templates/service-runtime.yaml
apiVersion: v1
kind: Service
metadata:
  name: curity-idsvr-runtime-svc
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: curity
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: http-port
      protocol: TCP
      name: http-port
    - port: 4465
      targetPort: health-check
      protocol: TCP
      name: health-check
    - port:  4466
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: idsvr
    app.kubernetes.io/instance: curity
---
# Source: idsvr/templates/deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curity-idsvr-admin
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: curity
    app.kubernetes.io/managed-by: Helm
    role: curity-idsvr-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: idsvr
      app.kubernetes.io/instance: curity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: idsvr
        helm.sh/chart: idsvr-0.9.19
        app.kubernetes.io/instance: curity
        app.kubernetes.io/managed-by: Helm
        role: curity-idsvr-admin
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "4466"
    spec:
      containers:
        - name: idsvr-admin
          image: "custom_idsvr:6.1.0"
          imagePullPolicy: Never
          command: ["/opt/idsvr/bin/idsvr"]
          args: ["-s", "admin",
                 "-N", "idsvr-admin","--admin"]
          ports:
            - name: config-port
              containerPort: 6789
              protocol: TCP
            - name: health-check
              containerPort: 4465
              protocol: TCP
            - name: metrics
              containerPort: 4466
              protocol: TCP
            - name: admin-ui
              containerPort: 6749
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          readinessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            successThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          volumeMounts:
            - mountPath: /opt/idsvr/etc/init/cluster.xml
              subPath: cluster.xml
              name: cluster-xml
              readOnly: true
            - mountPath: /opt/idsvr/etc/init/configmap-config.xml
              subPath: idsvr-config-backup.xml
              name: configmap-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: cluster-xml
          secret:
            secretName: curity-idsvr-cluster-config-xml
            items:
              - key: cluster-1.xml
                path: cluster.xml
        - name: configmap-config
          configMap:
            name: idsvr-configmap
---
# Source: idsvr/templates/deployment-runtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curity-idsvr-runtime
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: curity
    app.kubernetes.io/managed-by: Helm
    role: curity-idsvr-runtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: idsvr
      app.kubernetes.io/instance: curity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: idsvr
        helm.sh/chart: idsvr-0.9.19
        app.kubernetes.io/instance: curity
        app.kubernetes.io/managed-by: Helm
        role: curity-idsvr-runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "4466"
    spec:
      containers:
        - name: idsvr-runtime
          image: "custom_idsvr:6.1.0"
          imagePullPolicy: Never
          command: ["/opt/idsvr/bin/idsvr"]
          args: ["-s", "default","--no-admin"]
          ports:
            - name: http-port
              containerPort: 8443
              protocol: TCP
            - name: health-check
              containerPort: 4465
              protocol: TCP
            - name: metrics
              containerPort: 4466
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          readinessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            successThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          volumeMounts:
            - mountPath: /opt/idsvr/etc/init/cluster.xml
              subPath: cluster.xml
              name: cluster-xml
              readOnly: true
            - mountPath: /opt/idsvr/etc/init/configmap-config.xml
              subPath: idsvr-config-backup.xml
              name: configmap-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: cluster-xml
          secret:
            secretName: curity-idsvr-cluster-config-xml
            items:
              - key: cluster-1.xml
                path: cluster.xml
        - name: configmap-config
          configMap:
            name: idsvr-configmap
